# comm

./: .gitignore
docs/: dev_environment.md
landing/: button.react.js  footer.css  star-background.css  team-profile.css  team-profile.react.js  team.react.js
lib/actions/: activity-actions.js  entry-actions.js  message-actions.js  thread-actions.js  user-actions.js
lib/selectors/: socket-selectors.js
lib/shared/: entry-utils.js  message-utils.js  socket-utils.js  thread-utils.js  update-utils.js
lib/socket/: message-handler.react.js  request-response-handler.react.js  socket.react.js  update-handler.react.js
lib/types/: conversion-types.js
native/: package.json
native/android/app/: build.gradle
native/chat/: chat-context-provider.react.js  chat-context.js  chat-input-bar.react.js  input-bar-height-measurer.react.js  multimedia-message-tooltip-button.react.js  robotext-message-tooltip-button.react.js  text-message-tooltip-button.react.js  utils.js
native/chat/settings/: thread-settings-home-notifs.react.js  thread-settings-push-notifs.react.js
native/cpp/CommonCpp/CryptoTools/opaque-ke-ffi/: Cargo.toml  opaque_ke_ffi.h
native/cpp/CommonCpp/CryptoTools/opaque-ke-ffi/src/: lib.rs
native/data/: core-data-provider.react.js  core-data.js
native/ios/: Podfile
native/ios/Comm/: AppDelegate.mm
native/ios/Comm.xcodeproj/: project.pbxproj
native/redux/: persist.js
server/src/: server.js
server/src/creators/: message-creator.js  metadata-creator.js
web/: style.css  typography.css
web/icons/: AppIcons.json  selection.json
(+36 files in other folders)
