[package]
name = "opaque-ke-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opaque-ke = { version = "1.2.0", features = ["slow-hash"] }
libc = "0.2"
base64 = "0.13.0"
curve25519-dalek = "3"
rand = "0.8"
scrypt = "0.5"
sha2 = "0.9"

[lib]
crate-type = ["staticlib", "cdylib"]